[package]
name = "counting-contract"
version = "0.3.0"
edition = "2021"
 
[lib]
crate-type = ["cdylib", "rlib"]
 
[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.0.0"
cw-multi-test = { version = "0.17.0", optional = true }
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
schemars = "0.8.15"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
counting-contract-0_2 = { git = "https://github.com/apm1001/cw_counting_contract.git", rev = "0.2", package = "counting-contract", features = ["tests"] }
cw-multi-test = "0.17.0"
